add_library(DateException DateException.h DateException.cpp)
add_library(DateYear DateYear.h DateYear.cpp)
add_library(DateMonth DateMonth.h DateMonth.cpp)
target_link_libraries(DateYear PUBLIC DateException)
target_link_libraries(DateMonth PUBLIC DateException)
add_library(DateDay DateDay.h DateDay.cpp)
target_link_libraries(DateDay PUBLIC DateException)
target_link_libraries(DateDay PRIVATE DateYear)
target_link_libraries(DateDay PRIVATE DateMonth)